ihb 검색 및 페이징 작업 중